--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>htmlcss-struttura-discord</title>
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-25 height-50 bg-orange"></div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
