--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-25 height-50 bg-orange"></div>
+                <div class="col-25 bg-orange">
+                    <span>logo</span>
+                </div>
+                <div class="col-50 bg-orange">
+                    <span>
+                        <a href="">link</a>
+                        <a href="">link</a>
+                        <a href="">link</a>
+                    </span>
+                </div>
+                <div class="col-25 bg-orange">
+                    <span>login</span>
+                </div>
             </div>
         </div>
     </header>
