--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-25 bg-orange">
+                <div class="col-25 height-sm bg-orange">
                     <span>logo</span>
                 </div>
-                <div class="col-50 bg-orange">
+                <div class="col-50 height-sm bg-orange">
                     <span>
                         <a href="">link</a>
                         <a href="">link</a>
@@ -27,5 +27,13 @@
             </div>
         </div>
     </header>
+    <!-- centred container -->
+    <div class="bg-blue py-20">
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-100 height-xl bg-magenta"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
