--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
             </div>
         </div>
     </div>
+    
+    <div class="py-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-70 height-xl bg-dodger-blue"></div>
+                <div class="col-30 height-xl bg-pink"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
