--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-        <!-- container with 2 columns of different sizes and grey background -->
+    <!-- container with 2 columns of different sizes and grey background -->
     <div class="py-20 bg-grey">
         <div class="container">
             <div class="row">
@@ -53,5 +53,15 @@
             </div>
         </div>
     </div>
+        <!-- container with 2 columns of different sizes and white background -->
+    <div class="py-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-70 height-xl bg-dodger-blue"></div>
+                <div class="col-30 height-xl bg-pink"></div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
