--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="bg-blue py-20">
         <div class="container-sm">
             <div class="row">
-                <div class="col-100 height-xl bg-magenta"></div>
+                <div class="col-100 height-l bg-magenta"></div>
             </div>
         </div>
     </div>
@@ -62,6 +62,13 @@
             </div>
         </div>
     </div>
-    
+    <!-- centred container green on grey background -->
+    <div class="bg-grey py-20">
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-100 height-xl bg-green"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
