[UPD] column pink and green centered

--- a/index.html
+++ b/index.html
@@ -64,9 +64,20 @@
     </div>
     <!-- centred container green on grey background -->
     <div class="bg-grey py-20">
-        <div class="container-sm">
+        <div class="container">
             <div class="row">
                 <div class="col-100 height-xl bg-green"></div>
+            </div>
+        </div>
+    <!-- column pink and green centered -->
+    <div class="bg-dark-grey py-20 m-bottom-line">
+        <div class="container">
+            <div class="row">
+                <div class="col-20 height-xl bg-light-coral"></div>
+                <div class="col-20 height-xl bg-light-green"></div>
+                <div class="col-20 height-xl bg-light-green"></div>
+                <div class="col-20 height-xl bg-light-green"></div>
+                <div class="col-20 height-xl bg-light-green"></div>
             </div>
         </div>
     </div>
