[UPD] footer loaded

--- a/index.html
+++ b/index.html
@@ -81,5 +81,18 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
+    <div class="bg-dark-grey py-20 m-bottom-line">
+        <div class="container">
+            <div class="row">
+                <div class="col-100 height-sm bg-pink">
+                    <div class="row space-between a-center a-content-center">
+                        <button>ciao</button>
+                        <button>ciao</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
