[UPD] bug resolved "box-sizing: border-size" changed to "border-box"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="col-25 height-sm bg-orange">
                     <span>logo</span>
                 </div>
-                <div class="col-50 height-sm bg-orange">
+                <div class="col-25 f-grow height-sm bg-orange">
                     <span>
                         <a href="">link</a>
                         <a href="">link</a>
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-        <!-- container with 2 columns of different sizes and white background -->
+    <!-- container with 2 columns of different sizes and white background -->
     <div class="py-20">
         <div class="container">
             <div class="row">
@@ -69,6 +69,7 @@
                 <div class="col-100 height-xl bg-green"></div>
             </div>
         </div>
+    </div>
     <!-- column pink and green centered -->
     <div class="bg-dark-grey py-20 m-bottom-line">
         <div class="container">
